payload/workloads/wichteln/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wichteln
  labels:
    app: wichteln
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wichteln
  template:
    metadata:
      labels:
        app: wichteln
      annotations:
        io.cilium.proxy-visibility: "<Ingress/5000/TCP/HTTP>"
    spec:
      containers:
        - name: wichteln
          image: ghcr.io/janwelker/wichteln:sha-ae14037@sha256:a7d56f77ce5a62e15d4e95096139b5ced4361bbdcdda904aa7ec842ad7e1c042
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
