payload/workloads/wichteln/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wichteln
  labels:
    app: wichteln
spec:
  selector:
    app: wichteln
  ports:
    - name: http
      port: 80
      targetPort: 5000
